# sexy

./: LICENSE  README.md  sexy.cabal
src/: Sexy.hs
src/Sexy/: Classes.hs  Core.hs  Data.hs  Functions.hs  Instances.hs
src/Sexy/Classes/: Applicative.hs  Apply.hs  BoolC.hs  Category.hs  Cons.hs  DesnocMay.hs  EitherC.hs  Empty.hs  Eq.hs  FromInteger.hs  Functor.hs  HasElem.hs  List.hs  MaybeC.hs  Monad.hs  Monoid.hs  Nil.hs  OrderingC.hs  Plus.hs  Pure.hs  Show.hs  Subtract.hs  UnconsMay.hs
src/Sexy/Data/: Basics.hs  Bool.hs  Either.hs  Integer.hs  List.hs  Maybe.hs  Ordering.hs  String.hs  Unit.hs
src/Sexy/Functions/: Bool.hs  Either.hs  List.hs  Maybe.hs
src/Sexy/Instances/: Applicative.hs  Apply.hs  BoolC.hs  Category.hs  Cons.hs  DesnocMay.hs  EitherC.hs  Empty.hs  Eq.hs  FromInteger.hs  Functor.hs  HasElem.hs  List.hs  MaybeC.hs  Monad.hs  Monoid.hs  Nil.hs  OrderingC.hs  Plus.hs  Pure.hs  Show.hs  Subtract.hs  UnconsMay.hs
src/Sexy/Instances/Applicative/: Either.hs  Function.hs  IO.hs  List.hs  Maybe.hs
src/Sexy/Instances/Apply/: Function.hs  List.hs
src/Sexy/Instances/BoolC/: Bool.hs
src/Sexy/Instances/Category/: Function.hs
src/Sexy/Instances/Cons/: List.hs
src/Sexy/Instances/DesnocMay/: List.hs  Maybe.hs
src/Sexy/Instances/EitherC/: Either.hs
src/Sexy/Instances/Empty/: List.hs  Maybe.hs
src/Sexy/Instances/Eq/: Char.hs  Either.hs  Int.hs  List.hs  Maybe.hs
src/Sexy/Instances/FromInteger/: Double.hs  Int.hs
src/Sexy/Instances/Functor/: Either.hs  Function.hs  IO.hs  List.hs  Maybe.hs
src/Sexy/Instances/HasElem/: Either.hs  Function.hs  List.hs  Maybe.hs
src/Sexy/Instances/List/: List.hs
src/Sexy/Instances/MaybeC/: Maybe.hs
src/Sexy/Instances/Monad/: Either.hs  Function.hs  IO.hs  List.hs  Maybe.hs
src/Sexy/Instances/Monoid/: Either.hs  Function.hs  List.hs  Maybe.hs
src/Sexy/Instances/Nil/: Either.hs  Function.hs  Int.hs  List.hs  Maybe.hs  Unit.hs
src/Sexy/Instances/OrderingC/: Ordering.hs
src/Sexy/Instances/Plus/: Double.hs  Either.hs  Function.hs  Int.hs  List.hs  Maybe.hs
src/Sexy/Instances/Pure/: Either.hs  Function.hs  IO.hs  List.hs  Maybe.hs
src/Sexy/Instances/Show/: Bool.hs  Char.hs  Double.hs  Either.hs  Int.hs  Integer.hs  List.hs  Maybe.hs
src/Sexy/Instances/Subtract/: Int.hs
src/Sexy/Instances/UnconsMay/: Either.hs  List.hs  Maybe.hs
