name:                sexy
version:             0.1.0.0
synopsis:            A Sexier Prelude

-- description:         

homepage:            https://github.com/DanBurton/sexy
license:             AllRightsReserved
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
copyright:           (c) Dan Burton 2012

-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Sexy,
                         Sexy.Data,
                           Sexy.Data.Basics,
                           Sexy.Data.Bool,
                           Sexy.Data.Either,
                           Sexy.Data.Integer,
                           Sexy.Data.List,
                           Sexy.Data.Maybe,
                           Sexy.Data.String,
                           Sexy.Data.Ordering,
                           Sexy.Data.Unit,
                         Sexy.Classes,
                           Sexy.Classes.FromInteger,
                           Sexy.Classes.Plus,
                           Sexy.Classes.Show,
                           Sexy.Classes.Apply,
                           Sexy.Classes.Functor,
                           Sexy.Classes.Pure,
                           Sexy.Classes.Applicative,
                           Sexy.Classes.Monad,
                           Sexy.Classes.Category,
                           Sexy.Classes.Nil,
                           Sexy.Classes.HasElem,
                           Sexy.Classes.Cons,
                           Sexy.Classes.UnconsMay,
                           Sexy.Classes.Monoid,
                         Sexy.Instances,
                           Sexy.Instances.FromInteger,
                             Sexy.Instances.FromInteger.Double,
                             Sexy.Instances.FromInteger.Int,
                           Sexy.Instances.Plus,
                             Sexy.Instances.Plus.Double,
                             Sexy.Instances.Plus.Int,
                             Sexy.Instances.Plus.List,
                           Sexy.Instances.Show,
                             Sexy.Instances.Show.Bool,
                             Sexy.Instances.Show.Char,
                             Sexy.Instances.Show.Double,
                             Sexy.Instances.Show.Either,
                             Sexy.Instances.Show.Integer,
                             Sexy.Instances.Show.Int,
                             Sexy.Instances.Show.List,
                             Sexy.Instances.Show.Maybe,
                           Sexy.Instances.Apply,
                             Sexy.Instances.Apply.Function,
                           Sexy.Instances.Functor,
                             Sexy.Instances.Functor.List,
                             Sexy.Instances.Functor.Maybe,
                             Sexy.Instances.Functor.Either,
                             Sexy.Instances.Functor.Function,
                           Sexy.Instances.Pure,
                             Sexy.Instances.Pure.Function,
                           Sexy.Instances.Applicative,
                             Sexy.Instances.Applicative.Function,
                           Sexy.Instances.Monad,
                             Sexy.Instances.Monad.Function,
                           Sexy.Instances.Category,
                             Sexy.Instances.Category.Function
                           Sexy.Instances.Nil,
                             Sexy.Instances.Nil.List,
                           Sexy.Instances.HasElem,
                             Sexy.Instances.HasElem.List,
                           Sexy.Instances.Cons,
                             Sexy.Instances.Cons.List,
                           Sexy.Instances.UnconsMay,
                             Sexy.Instances.UnconsMay.List,
                           Sexy.Instances.Monoid,
                             Sexy.Instances.Monoid.List
  extensions:          NoImplicitPrelude, TypeFamilies
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base == 4.5.*

